--- a/style.css
+++ b/style.css
@@ -43,7 +43,15 @@ body {
     border-radius: 5px;
 }
 .tools-Elements:hover {
+    cursor: pointer;
+    transition: background-color 0.3s;
     background-color: #e0dfff;
+}
+.arrow{
+    background-color: #e0dfff;
+}
+#penIcon {
+    cursor: pointer; /* Set cursor to pointer when hovering over the pen icon */
 }
 .user{
     width: 10.5%;
@@ -109,6 +117,38 @@ img{
 .op1{
     margin-right: 5px;  
 }
+#footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.ft-element{
+    color: #313135; 
+    margin: 5px;
+    margin-top: 20px;
+}
+.ft-element-1{ 
+    text-align: center;
+    width: 70px;
+background-color: #ececf4; 
+  border-radius: 7px;
+}
+.ur{
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+.ur:hover { 
+    background-color: #e0dfff;
+}
+canvas {
+    border: 1px solid #000;
+    width: 100%;
+    height: 80vh;
+}
+.draw-cursor {
+    cursor: crosshair;
+}
+
 @media (max-width: 1024px){
     .folder{
         width: 2.5%;
@@ -125,4 +165,4 @@ img{
     img{
         width: 70%;
     }
-}
+} 
